syntax = "proto3";

option go_package = "../listing";
package listing;

message Listing {
    string id = 1;
    string userId = 2;
    string title = 3;
    string description = 4;
    string price = 5;
    string category = 6;
    bool second = 7;
    int64 createdAt = 8;
    int64 updatedAt = 9;
}

message ListingId {
    string id = 1;
}

message NewListing {
    string userId = 1;
    string title = 2;
    string description = 3;
    string price = 4;
    string category = 5;
    bool second = 6;
}

message NewListingResponse {
    int64 status = 1;
    Listing listing = 2;
}

service ListingService {
    rpc Create(NewListing) returns (NewListingResponse) {}
    rpc Get(ListingId) returns (Listing) {}
    rpc Update(ListingId) returns (Listing) {}
    rpc Delete(ListingId) returns (ListingId) {}
}

